# ask

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
ask/: chat.py  command.py  config.py  edit.py  extract.py  files.py  helpers.py  interactive.py  main.py  messages.py  models.py  pdf.py  query.py  tree.py
ask/commands/: __init__.py  bash.py  context.py  memorize.py  python.py
ask/models/: __init__.py  anthropic.py  base.py  black_forest_labs.py  deepseek.py  google.py  legacy.py  openai.py  strawberry.py  tool_helpers.py
ask/prompts/: __init__.py  docs.toml  init.toml  system.toml  tools.toml
ask/prompts/claude/: extract.py  system.toml
ask/prompts/codex/: extract.py  permissions.toml  system.toml
ask/prompts/tools/: bash.toml  edit.toml  glob.toml  grep.toml  list.toml  ls.toml  multi_edit.toml  python.toml  read.toml  task.toml  todo.toml  todo_write.toml  web_fetch.toml  web_search.toml  write.toml
ask/shells/: __init__.py  bash.py  python.py
ask/tools/: __init__.py  base.py  bash.py  edit.py  glob_.py  globb.py  grep.py  list.py  ls.py  multi_edit.py  python.py  read.py  render.py  replace.py  todo.py  view.py  write.py
ask/ui/: __main__.py  app.py  approvals.py  box.py  boxes.py  commands.py  components.py  config.py  cursor.py  dialogs.py  diff.py  markdown_.py  messages.py  render.py  settings.py  spinner.py  styles.py  textbox.py  theme.py
ask/ui/commands/: __init__.py
ask/ui/core/: __init__.py  components.py  cursor.py  diff.py  layout.py  markdown_.py  render.py  styles.py  termcolor.py  textbox.py  tree.py
ask/ui/tools/: __init__.py  base.py  bash.py  diff.py  edit.py  glob.py  grep.py  list.py  python.py  read.py  todo.py
test/: test_edit.py  test_query.py  test_tree.py
test/commands/: test_memorize.py
test/models/: helpers.py  test_anthropic.py  test_google.py  test_legacy.py  test_openai.py
test/section/: result
test/shells/: test_bash_shell.py  test_python_shell.py
test/test-cases/add-context-manager/: original.txt  section.patch
test/test-cases/indented-section-markers/: result.txt  section.patch
test/test-cases/leading-insertion/: original.txt  result.txt  section.patch
test/test-cases/raw-response/: section.patch  udiff.patch
test/test-cases/rename-arg/: original.txt  result.txt  section.patch  udiff.patch
test/test-cases/single-function-2/: section.patch
test/tools/: test_bash.py  test_edit.py  test_glob.py  test_grep.py  test_list.py  test_multi_edit.py  test_parameters.py  test_python.py  test_read.py  test_write.py
test/udiff/: original  patch  result
test/ui/: test_box.py  test_commands.py  test_components.py  test_markdown.py  test_messages.py  test_prompt_textbox.py  test_render.py  test_spacing.py  test_styles.py  test_text.py  test_textbox.py
tests/: test_query.py  test_tree.py
tests/models/: helpers.py  test_anthropic.py  test_google.py  test_legacy.py  test_openai.py
tests/shells/: test_bash_shell.py  test_python_shell.py
tests/tools/: test_edit.py  test_glob.py  test_multi_edit.py  test_write.py
(+47 files in other folders)
