[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask"
version = "0.1.0"
description = "CLI tool for coding and researching with LLMs"
authors = [
    {name = "Mitchell Goff", email = "mitchellgoffpc@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "markdown",
    "pygments",
    "tqdm",
    "types-markdown",
    "types-pygments",
]

[project.scripts]
ask = "ask.main:main"

[project.optional-dependencies]
testing = [
    "ruff",
    "ty",
    "pytest",
    "pre-commit",
]

[tool.setuptools]
packages = ["ask"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
line-length = 160
target-version = "py311"
lint.select = ["A", "B", "E", "F", "I", "N", "S", "W", "C4", "FA", "ISC", "PIE", "SIM", "TID", "PTH", "UP"]
lint.ignore = ["E701", "I001", "N802", "N812", "N813", "S101", "PTH207"]
